# Vulkan-Experiments

./: .clang-format  .clang-tidy  .clangd  .gitmodules  CMakeLists.txt  README.org  bindless.cpp  bindless.hpp  camera.hpp  defer.hpp  globals.hpp  main.cpp  pipelines.cpp  pipelines.hpp  quaternion.slang  shader_objects.hpp  shaders.slang  types.hpp  utils.cpp  vulkan_flow.cpp  vulkan_flow.hpp  window.cpp  window.hpp
resources/: skybox.ktx2
src/: bindless.cpp  bindless.hpp  camera.cpp  camera.hpp  defer.hpp  geometry.hpp  globals.hpp  light.hpp  main.cpp  shader_objects.hpp  shaders.slang  sync.cpp  sync.hpp  vulkan_flow.cpp  vulkan_flow.hpp  window.cpp  window.hpp
